feat: refactored health check to allow batch request
