# src/main/openapi/openapi-bff.yaml
@@ -288,8 +288,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
-  /providers/{id}/health:
-    get:
+  /providers/health:
+    post:
       x-onecx:
         permissions:
           provider:
@@ -298,21 +298,25 @@ paths:
         - provider
       description: Return Provider health status by its ID
       operationId: getProviderHealthStatus
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProviderHealthStatusRequest'
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ProviderHealthStatus'
-        "404":
-          description: Not found
+                $ref: '#/components/schemas/ProviderHealthStatusResponse'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /mcpServers:
     post:
       x-onecx:
@@ -455,6 +459,8 @@ components:
     ProviderHealthStatus:
       type: object
       properties:
+        providerId:
+          type: string
         status:
           type: string
           enum:
@@ -462,6 +468,23 @@ components:
             - UNHEALTHY
         checkedAt:
           $ref: '#/components/schemas/OffsetDateTime'
+    ProviderHealthStatusRequest:
+      type: object
+      required:
+        - providers
+      properties:
+        providers:
+          type: array
+          minItems: 1
+          items:
+            type: string
+    ProviderHealthStatusResponse:
+      type: object
+      properties:
+        providerHealthStatuses:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProviderHealthStatus'
     MCPServer:
       type: object
       required:
